# TradingCore

./: .gitignore  Arranque servidor remoto.docx  Documentación técnica TradingCore v1.0.docx  OPTIMIZACIONES_IMPLEMENTADAS.md  README.md  Restaurar_db.ps1  System.html  estructura.txt  inyectar_graficos_test.py  migrar_datos.py  mkdocs.yml  pg_start.bat  pg_stop.bat  requirements.txt  run_backtest_scheduler.bat  salida.txt  start_web.bat  stop_web.bat  test_output.txt  test_rsi_umbral.py  trasvase_db.py
Backtesting/: Leeme.txt  tradingcore.db  users.csv
Data_files/: 2025-12-17_5y1wk_ADBE.csv  2025-12-17_5y1wk_ASML.csv  2025-12-17_5y1wk_EXPO.csv  2025-12-17_5y1wk_GOOG.csv  2025-12-17_5y1wk_JNJ.csv  2025-12-17_5y1wk_NKE.csv  2025-12-17_5y1wk_NVDA.csv  2025-12-17_5y1wk_UNH.csv  2025-12-17_5y1wk_ZTS.csv  2025-12-17_max1wk_ADBE.csv  2025-12-17_max1wk_ASML.csv  2025-12-17_max1wk_EXPO.csv  2025-12-17_max1wk_GOOG.csv  2025-12-17_max1wk_JNJ.csv  2025-12-17_max1wk_NKE.csv  2025-12-17_max1wk_NVDA.csv  2025-12-17_max1wk_UNH.csv  (+23 more)
trading_engine/: pyproject.toml
trading_engine/core/: Backtest_Runner copy.py  Backtest_Runner.py  Logica_Trading copy.py  Logica_Trading.py  constants.py  database_pg.py  leeme.txt
trading_engine/indicators/: Filtro_ATR.py  Filtro_BollingerBands.py  Filtro_EMA.py  Filtro_MACD.py  Filtro_RSI.py  Filtro_Stochastic.py
trading_engine/indicators/Backup/: Filtro_EMA.py  Filtro_Volume.py
trading_engine/utils/: Calculos_Financieros.py  Calculos_Tecnicos.py  Data_download.py  Graficos_financieros.py  Historico_manager.py  setup.py  utils_mail.py
(+253 files in other folders)
